test/types/records/init/no-default-init-typeless.good
no-default-init-typeless.chpl:3: error: default initialization with type 'R(int(64))' is not yet supported
no-default-init-typeless.chpl:1: note: field 'genericField' is a generic value
no-default-init-typeless.chpl:1: note: consider separately declaring a type field for it or using a 'new' call
