test/types/records/init/no-default-init-typeless.chpl
record R { var genericField; }

var x: R(int); // error
writeln(x, " : ", x.type:string);

